# cplug_test

./: .clang-format  .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json
src/: config.h  defs.h  gui.cpp  gui_GL.cpp  main.c
